# simple-mod-framework-installer

./: Cargo.toml  build.rs  eframe_template.js  eframe_template_bg.wasm  index.html  rustfmt.toml
src/: app.rs  lib.rs  main.rs
