[package]
name = "simple_mod_framework_installer"
version = "1.0.0"
authors = ["Atampy26"]
edition = "2021"
rust-version = "1.60"

[package.metadata.winres]
ProductName = "Simple Mod Framework installer"

[dependencies]
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }
eframe = "0.19.0"
tracing-subscriber = "0.3"
rfd = "0.10.0"
human_bytes = { version = "0.4", default-features = false }
reqwest = { version = "0.11.13", features = ["blocking"] }
poll-promise = "0.2.0"
ehttp = "0.2.0"
zip-extract = "0.1.1"
mslnk = "0.1.8"
dirs = "4.0.0"
registry = "1.2.3"
keyvalues-serde = "0.1.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
rust-ini = "0.18.0"
base64 = "0.21.0"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
